@@ -1,3 +1,4 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /* 
  * Copyright (C) 2002 Bastien Nocera <hadess@hadess.net>
  *
@@ -49,11 +50,13 @@ enum {
 	PROP_0,
 	PROP_DEVICE,
 	PROP_FILE_IMAGE,
+	PROP_RECORDERS_ONLY,
 };
 
 struct BaconCdSelectionPrivate {
 	GList *cdroms;
 	gboolean have_file_image;
+	gboolean show_recorders_only;
 };
 
 static void bacon_cd_selection_init (BaconCdSelection *bcs);
@@ -102,9 +105,12 @@ bacon_cd_selection_class_init (BaconCdSelectionClass *klass)
 	/* Properties */
 	g_object_class_install_property (object_class, PROP_DEVICE,
 			g_param_spec_string ("device", NULL, NULL,
-				FALSE, G_PARAM_READWRITE));
+				NULL, G_PARAM_READWRITE));
 	g_object_class_install_property (object_class, PROP_FILE_IMAGE,
 			g_param_spec_boolean ("file-image", NULL, NULL,
+				FALSE, G_PARAM_READWRITE));
+	g_object_class_install_property (object_class, PROP_RECORDERS_ONLY,
+			g_param_spec_boolean ("show-recorders-only", NULL, NULL,
 				FALSE, G_PARAM_READWRITE));
 
 	/* Signals */
@@ -159,6 +165,13 @@ combo_device_changed (GtkComboBox *combo, gpointer user_data)
 	int i;
 
 	i = gtk_combo_box_get_active (combo);
+	/* No selection */
+	if (i < 0) {
+		g_signal_emit (G_OBJECT (bcs),
+				bcs_table_signals[DEVICE_CHANGED],
+				0, NULL);
+		return;
+	}
 	drive = get_drive (bcs, i);
 
 	g_signal_emit (G_OBJECT (bcs),
@@ -167,12 +180,12 @@ combo_device_changed (GtkComboBox *combo, gpointer user_data)
 }
 
 static void
-cdrom_combo_box (BaconCdSelection *bcs)
+cdrom_combo_box (BaconCdSelection *bcs, gboolean show_recorders_only, gboolean show_file_image)
 {
 	GList *l;
 	CDDrive *cdrom;
 
-	bcs->priv->cdroms = scan_for_cdroms (FALSE, FALSE);
+	bcs->priv->cdroms = scan_for_cdroms (show_recorders_only, show_file_image);
 
 	for (l = bcs->priv->cdroms; l != NULL; l = l->next)
 	{
@@ -215,7 +228,7 @@ bacon_cd_selection_new (void)
 			NULL);
 
 	bcs = BACON_CD_SELECTION (widget);
-	cdrom_combo_box (bcs);
+	cdrom_combo_box (bcs, FALSE, FALSE);
 
 	g_signal_connect (G_OBJECT (bcs), "changed",
 			G_CALLBACK (combo_device_changed), bcs);
@@ -241,7 +254,7 @@ bacon_cd_selection_set_have_file_image (BaconCdSelection *bcs,
 		GList *item;
 		int index;
 
-		index = g_list_length (bcs->priv->cdroms);
+		index = g_list_length (bcs->priv->cdroms) - 1;
 		gtk_combo_box_remove_text (GTK_COMBO_BOX (bcs), index);
 
 		item = g_list_last (bcs->priv->cdroms);
@@ -249,14 +262,105 @@ bacon_cd_selection_set_have_file_image (BaconCdSelection *bcs,
 		cd_drive_free (cdrom);
 		bcs->priv->cdroms = g_list_delete_link
 			(bcs->priv->cdroms, item);
+		gtk_widget_set_sensitive (GTK_WIDGET (bcs), (bcs->priv->cdroms != NULL));
 	} else {
+		gboolean activate = FALSE;
+
 		cdrom = cd_drive_get_file_image ();
 		gtk_combo_box_append_text (GTK_COMBO_BOX (bcs),
 				cdrom->display_name);
+		if (bcs->priv->cdroms == NULL) {
+			activate = TRUE;
+		}
 		bcs->priv->cdroms = g_list_append (bcs->priv->cdroms, cdrom);
+		gtk_widget_set_sensitive (GTK_WIDGET (bcs), TRUE);
+		if (activate != FALSE) {
+			gtk_combo_box_set_active (GTK_COMBO_BOX (bcs), 0);
+		}
 	}
 
 	bcs->priv->have_file_image = have_file_image;
+}
+
+static gint
+compare_drives (CDDrive *drive1, CDDrive *drive2)
+{
+	if (!drive1 || !drive2)
+		return 1;
+
+	if ((drive1->type & CDDRIVE_TYPE_FILE)
+	    && (drive2->type & CDDRIVE_TYPE_FILE))
+		return 0;
+
+	if (!drive1->device || !drive2->device)
+		return 1;
+
+	return strcmp (drive1->device, drive2->device);
+}
+
+static void
+bacon_cd_selection_set_recorders_only (BaconCdSelection *bcs,
+				       gboolean recorders_only)
+{
+
+	g_return_if_fail (bcs != NULL);
+	g_return_if_fail (BACON_IS_CD_SELECTION (bcs));
+
+	if (bcs->priv->show_recorders_only == recorders_only)
+		return;
+
+	if (recorders_only == TRUE) {
+		GList *l = g_list_last (bcs->priv->cdroms);
+		int i = g_list_length (bcs->priv->cdroms);
+
+		while (l) {
+			GList *prev = l->prev;
+			CDDrive *drive = l->data;
+
+			i--;
+
+			if (!(drive->type & CDDRIVE_TYPE_CD_RECORDER
+			      || drive->type & CDDRIVE_TYPE_CDRW_RECORDER
+			      || drive->type & CDDRIVE_TYPE_DVD_RAM_RECORDER
+			      || drive->type & CDDRIVE_TYPE_DVD_RW_RECORDER
+			      || drive->type & CDDRIVE_TYPE_FILE)) {
+				gtk_combo_box_remove_text (GTK_COMBO_BOX (bcs), i);
+				cd_drive_free (drive);
+				bcs->priv->cdroms = g_list_delete_link (bcs->priv->cdroms, l);
+			}
+
+			l = prev;
+		}
+	} else {
+		GList *drives = scan_for_cdroms (recorders_only, bcs->priv->have_file_image);
+		GList *l;
+		int i = g_list_length (bcs->priv->cdroms);
+
+		gtk_widget_set_sensitive (GTK_WIDGET (bcs), (drives != NULL));
+
+		if (bcs->priv->have_file_image)
+			i--;
+
+		for (l = drives; l != NULL; l = l->next) {
+			CDDrive *drive = l->data;
+
+			if (!g_list_find_custom (bcs->priv->cdroms,
+						 drive,
+						 (GCompareFunc)compare_drives)) {
+				gtk_combo_box_insert_text (GTK_COMBO_BOX (bcs),
+							   i,
+							   drive->display_name);
+				bcs->priv->cdroms = g_list_insert (bcs->priv->cdroms,
+								   drive,
+								   i);
+			} else {
+				cd_drive_free (drive);
+			}
+		}
+		g_list_free (drives);
+	}
+
+	bcs->priv->show_recorders_only = recorders_only;
 }
 
 /* Properties */
@@ -277,6 +381,10 @@ bacon_cd_selection_set_property (GObject *object, guint property_id,
 		break;
 	case PROP_FILE_IMAGE:
 		bacon_cd_selection_set_have_file_image (bcs,
+				g_value_get_boolean (value));
+		break;
+	case PROP_RECORDERS_ONLY:
+		bacon_cd_selection_set_recorders_only (bcs,
 				g_value_get_boolean (value));
 		break;
 	default:
@@ -301,6 +409,9 @@ bacon_cd_selection_get_property (GObject *object, guint property_id,
 		break;
 	case PROP_FILE_IMAGE:
 		g_value_set_boolean (value, bcs->priv->have_file_image);
+		break;
+	case PROP_RECORDERS_ONLY:
+		g_value_set_boolean (value, bcs->priv->show_recorders_only);
 		break;
 	default:
 		G_OBJECT_WARN_INVALID_PROPERTY_ID (object, property_id, pspec);
