@@ -1,5 +1,13 @@
 2004-09-21  Ross Burton  <ross@burtonini.com>
 
+	* src/bacon-cd-selection.c:
+	* src/cd-drive.c:
+	* src/cd-drive.h:
+	* src/dvd_plus_rw_utils.cpp:
+	Updated from NCB.
+
+2004-09-21  Ross Burton  <ross@burtonini.com>
+
 	* data/Makefile.am:
 	Use $(GCONFTOOL) instead of gconftool-2.
 
